<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>pt.uminho.npr.projeto</groupId>
  <artifactId>proj</artifactId>
  <packaging>jar</packaging>
  <version>0.1</version>
  
  <name>proj</name>
  
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>21</maven.compiler.release>
  </properties>

  <build>
      <plugins>
          <!-- Compiler Plugin -->
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-compiler-plugin</artifactId>
              <version>3.8.1</version>
          </plugin>

          <!-- JAR Plugin (This sets the Main-Class in the Manifest) -->
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-jar-plugin</artifactId>
              <version>3.2.2</version>
              <configuration>
                  <archive>
                      <manifest>
                          <mainClass>pt.uminho.npr.projeto.VehApp</mainClass>
                      </manifest>
                  </archive>
              </configuration>
          </plugin>
      </plugins>
  </build>

  <repositories> 
      <repository>
          <id>repo.eclipse.org</id>
          <name>MOSAIC Repository</name>
          <url>https://repo.eclipse.org/content/repositories/mosaic</url>
      </repository>
  </repositories>
                 
  <dependencies>
      <dependency>
          <groupId>org.eclipse.mosaic</groupId>
          <artifactId>mosaic-application</artifactId>
          <version>25.0</version>
      </dependency>
  </dependencies>
</project>
